--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -550,6 +550,7 @@
 </script>
 
 <script src="{{ static_url_for('tpos/static', path='js/tpos.js') }}"></script>
+<script src="{{ static_url_for('tpos/static', path='components/item-list.js') }}"></script>
 
 <style scoped>
   input::-webkit-outer-spin-button,
