--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -533,7 +533,7 @@
   tpos.currency = '{{ tpos.currency }}'
   tpos.withdraw_premium = Number('{{ tpos.withdraw_premium }}') / 100
   withdraw_maximum = Number('{{ withdraw_maximum }}')
-  const items = '{{ items | safe }}'
+  const items = '{{ tpos.items | safe }}'
   tpos.items = items ? JSON.parse(items) : []
   const options = '{{ tpos.tip_options | safe }}'
   tpos.tip_options = options ? JSON.parse(options) : []
