--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -219,7 +219,7 @@
       </q-page-sticky>
       <q-page-sticky position="top-right" :offset="[18, 162]">
         <q-btn
-          @click="activeAtmMode"
+          @click="startAtmMode"
           v-if="withdrawMaximum > 0 && !atmMode"
           fab
           icon="atm"
@@ -529,11 +529,12 @@
 {% endblock %} {% block scripts %}
 <script>
   const tpos = JSON.parse({{ tpos | tojson | safe }})
-  tpos.items = JSON.parse(tpos.items)
+  tpos.items = tpos.items !== null ? JSON.parse(tpos.items) : []
   tpos.tip_options = tpos.tip_options ? JSON.parse(tpos.tip_options) : []
   if (tpos.withdraw_maximum) {
     tpos.withdraw_premium = Number(tpos.withdraw_maximum / 100)
   }
+  const items = tpos.items
   const options = tpos.tip_options
   const withdraw_maximum = tpos.withdraw_limit
   const withdraw_pin_open = Number('{{ withdraw_pin_open }}')
