--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -200,11 +200,7 @@
       </q-card-section>
       <q-card-section>
         <q-form autofocus @submit="lnaddressSubmit" class="q-gutter-md">
-          <q-input
-            filled
-            type="text"
-            v-model="lnaddressDialog.lnaddress"
-          >
+          <q-input filled type="text" v-model="lnaddressDialog.lnaddress">
           </q-input>
           <div>
             <q-btn label="Submit" type="submit" color="primary"></q-btn>
