--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -243,8 +243,8 @@
           fab
           icon="cancel_schedule_send"
           color="primary"
-          
-        ><q-tooltip>Clear LNaddress</q-tooltip></q-btn>
+          ><q-tooltip>Clear LNaddress</q-tooltip></q-btn
+        >
       </q-page-sticky>
     </template>
     <template v-else>
