fix: lnaddress button

--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -239,7 +239,7 @@
       <q-page-sticky position="top-right" :offset="[18, 306]">
         <q-btn
           @click="clearLNaddress"
-          v-if="lnaddress"
+          v-if="tposLNaddress"
           fab
           icon="cancel_schedule_send"
           color="primary"
