use LNBITS_DENOMINATION rather than sats

--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -22,10 +22,11 @@
       <div class="text-center">
         <h3 class="q-my-md">${ amountWithTipFormatted }</h3>
         <h5 class="q-mt-none q-mb-sm">
+         <span v-if="'{{ LNBITS_DENOMINATION }}' == 'sats'"> 
           ${ fsat }
-          <small> sat </small>
+          <small> sat</small></span>
           <span v-show="tip_options" style="font-size: 0.75rem"
-            >(+ ${ tipAmountFormatted } tip)</span
+            >( + ${ tipAmountFormatted } tip)</span
           >
         </h5>
         <q-chip v-if="nfcTagReading" square>
