--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -20,14 +20,16 @@
         <q-tooltip>Pay in wallet</q-tooltip>
       </a>
       <div class="text-center">
-        <h3 class="q-my-md">${ amountWithTipFormatted }</h3>
+        <h3 class="q-my-md">
+          <span v-text="formatBalance(amount + tipAmount)"></span>
+          </h3>
         <h5 class="q-mt-none q-mb-sm">
-         <span v-if="'{{ LNBITS_DENOMINATION }}' == 'sats'"> 
-          ${ fsat }
-          <small> sat</small></span>
-          <span v-show="tip_options" style="font-size: 0.75rem"
-            >( + ${ tipAmountFormatted } tip)</span
-          >
+          <span v-text="formatBalance(amount)"></span>
+          <span 
+          v-if="tip_options" 
+          style="font-size: 0.75rem" 
+          v-text="' + ' + formatBalance(tipAmount) + ' tip'">
+        </span>
         </h5>
         <q-chip v-if="nfcTagReading" square>
           <q-avatar icon="nfc" color="positive" text-color="white"></q-avatar>
