--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -150,10 +150,11 @@
         </q-item>
         <q-item v-for="(payment, idx) in lastPaymentsDialog.data" :key="idx">
           <q-item-section>
-            <q-item-label class="text-bold" 
-            v-text="formatBalance(payment.amount  / 1000)">
-            </q-item-label
+            <q-item-label
+              class="text-bold"
+              v-text="formatBalance(payment.amount  / 1000)"
             >
+            </q-item-label>
             <q-item-label caption lines="2"
               >Hash: ${payment.checking_id.slice(0, 30)}...</q-item-label
             >
