hmmm, change of tack

--- a/templates/tpos/dialogs.html
+++ b/templates/tpos/dialogs.html
@@ -20,11 +20,12 @@
         <q-tooltip>Pay in wallet</q-tooltip>
       </a>
       <div class="text-center">
-        <h3 class="q-mb-md" v-text="formatBalance(amount + tipAmount)"></h3>
+        <h3 class="q-my-md">${ amountWithTipFormatted }</h3>
         <h5 class="q-mt-none q-mb-sm">
-          <span v-text="formatBalance(amount)"></span>
-          <small v-if="tip_options"
-            >(+ <span v-text="formatBalance(tipAmount)"></span> tip)</small
+          ${ fsat }
+          <small> sat </small>
+          <span v-show="tip_options" style="font-size: 0.75rem"
+            >(+ ${ tipAmountFormatted } tip)</span
           >
         </h5>
         <q-chip v-if="nfcTagReading" square>
