--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -26,7 +26,7 @@
         <div class="col-12 col-sm-8 col-md-6 col-lg-4 text-center">
           <h3 class="q-mb-md">${ amountFormatted }</h3>
           <h5 v-show="!denomIsSats" class="q-mt-none q-mb-sm">
-            ${ fsat }<small> sat</small>
+            ${ fsat }&nbsp;<small v-text="'{{ LNBITS_DENOMINATION }}'"></small>
           </h5>
           <div v-if="total > 0.0">
             <h5>
