--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -25,7 +25,10 @@
       <div class="row justify-center full-width">
         <div class="col-12 col-sm-8 col-md-6 col-lg-4 text-center">
           <h3 class="q-mb-md">${ amountFormatted }</h3>
-          <h5 v-show="!denomIsSats" class="q-mt-none q-mb-sm">
+          <h5
+            v-show="!denomIsSats && '{{LNBITS_DENOMINATION}}' == 'sats'"
+            class="q-mt-none q-mb-sm"
+          >
             ${ fsat }<small> sat</small>
           </h5>
           <div v-if="total > 0.0">
